--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 	<meta charset="utf-8">
 	<title>Your awesome title</title>
  
-	<link rel="stylesheet" type="text/css" href="//assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="http://localhost:4000/assets/css/style.css">
 	<script type="text/javascript" src="http://localhost:4000/assets/js/jquery-3.1.1.min.js"></script>
 	
 </head>
