--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 	jQl.loadjQ('/assets/js/jquery-3.1.1.min.js');
 
 	</script>
+
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-93487263-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 	<!-- Begin Jekyll SEO tag v2.1.0 -->
 <title>Dario Kos - Web Developer - Web Developer / Student of Information Technologies.</title>
 <meta property="og:title" content="Dario Kos - Web Developer" />
